--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <img src="img/products_7.jpg" alt="" class="img-fluid">
                 <img src="img/products_8.jpg" alt="" class="img_swap img-fluid">
                 <img src="img/dis_tag.png" alt="" class="dis_tag">
-                <img src="img/New.png" alt="" class="dis_mid">
+                <img src="img/new_2.png" alt="" class="dis_mid">
                 <div class="new_products_icon">
                   <a href="#" class="icon_btn"><i class="fa-solid fa-cart-plus"></i></a>
                   <a href="#" class="icon_btn"><i class="fa-solid fa-heart"></i></a>
@@ -364,7 +364,7 @@
                 <img src="img/products_13.jpg" alt="" class="img-fluid">
                 <img src="img/products_14.jpg" alt="" class="img_swap img-fluid">
                 <img src="img/dis_tag.png" alt="" class="dis_tag">
-                <img src="img/New.png" alt="" class="dis_mid">
+                <img src="img/new_2.png" alt="" class="dis_mid">
                 <div class="new_products_icon">
                   <a href="#" class="icon_btn"><i class="fa-solid fa-cart-plus"></i></a>
                   <a href="#" class="icon_btn"><i class="fa-solid fa-heart"></i></a>
@@ -391,7 +391,7 @@
                 <img src="img/products_15.jpg" alt="" class="img-fluid">
                 <img src="img/products_16.jpg" alt="" class="img_swap img-fluid">
                 <img src="img/dis_tag.png" alt="" class="dis_tag">
-                <img src="img/New.png" alt="" class="dis_mid">
+                <img src="img/new_2.png" alt="" class="dis_mid">
                 <div class="new_products_icon">
                   <a href="#" class="icon_btn"><i class="fa-solid fa-cart-plus"></i></a>
                   <a href="#" class="icon_btn"><i class="fa-solid fa-heart"></i></a>
@@ -534,7 +534,7 @@
                 <img src="img/products_7.jpg" alt="" class="img-fluid">
                 <img src="img/products_8.jpg" alt="" class="img-fluid seller_img_swep">
                 <img src="img/dis_tag.png" alt="" class="dis_tag">
-                <img src="img/New.png" alt="" class="dis_mid">
+                <img src="img/new_2.png" alt="" class="dis_mid">
                 <div class="seller_products_icon">
                   <a href="#" class="icon_btn"><i class="fa-solid fa-cart-plus"></i></a>
                   <a href="#" class="icon_btn"><i class="fa-solid fa-heart"></i></a>
@@ -619,7 +619,7 @@
                 <img src="img/products_13.jpg" alt="" class="img-fluid">
                 <img src="img/products_14.jpg" alt="" class="img-fluid seller_img_swep">
                 <img src="img/dis_tag.png" alt="" class="dis_tag">
-                <img src="img/New.png" alt="" class="dis_mid">
+                <img src="img/new_2.png" alt="" class="dis_mid">
                 <div class="seller_products_icon">
                   <a href="#" class="icon_btn"><i class="fa-solid fa-cart-plus"></i></a>
                   <a href="#" class="icon_btn"><i class="fa-solid fa-heart"></i></a>
@@ -648,7 +648,7 @@
                 <img src="img/products_15.jpg" alt="" class="img-fluid">
                 <img src="img/products_16.jpg" alt="" class="img-fluid seller_img_swep">
                 <img src="img/dis_tag.png" alt="" class="dis_tag">
-                <img src="img/New.png" alt="" class="dis_mid">
+                <img src="img/new_2.png" alt="" class="dis_mid">
                 <div class="seller_products_icon">
                   <a href="#" class="icon_btn"><i class="fa-solid fa-cart-plus"></i></a>
                   <a href="#" class="icon_btn"><i class="fa-solid fa-heart"></i></a>
@@ -782,7 +782,9 @@
         </div>
         <div class="row card_slider">
           <div class="card" style="width: 312px;">
-            <img src="img/news_slider_img_1.jpg" class="card-img-top" alt="...">
+             <div class="card_img">
+                <img src="img/news_slider_img_1.jpg" class="card-img-top" alt="...">
+             </div>
             <div class="card-body">
               <h5>Best multi-step Beauty skin.</h5>
               <p>Appropriately seize 24/365 markets without adaptive.</p>
@@ -794,7 +796,9 @@
             </div>
           </div>
           <div class="card" style="width: 312px;">
-            <img src="img/news_slider_img_2.jpg" class="card-img-top" alt="...">
+            <div class="card_img">
+              <img src="img/news_slider_img_2.jpg" class="card-img-top" alt="...">
+            </div>
             <div class="card-body">
               <h5>Herbal treatment for dry scal</h5>
               <p>Appropriately seize 24/365 markets without adaptive.</p>
@@ -806,7 +810,9 @@
             </div>
           </div>
           <div class="card" style="width: 312px;">
-            <img src="img/news_slider_img_3.jpg" class="card-img-top" alt="...">
+            <div class="card_img">
+              <img src="img/news_slider_img_3.jpg" class="card-img-top" alt="...">
+            </div>
             <div class="card-body">
               <h5>Traveling Solo Is Awesome</h5>
               <p>Appropriately seize 24/365 markets without adaptive.</p>
@@ -818,7 +824,9 @@
             </div>
           </div>
           <div class="card" style="width: 312px;">
-            <img src="img/news_slider_img_4.jpg" class="card-img-top" alt="...">
+            <div class="card_img">
+              <img src="img/news_slider_img_4.jpg" class="card-img-top" alt="...">
+            </div>
             <div class="card-body">
               <h5>A Beautiful Sunday Morning</h5>
               <p>Appropriately seize 24/365 markets without adaptive.</p>
@@ -830,7 +838,9 @@
             </div>
           </div>
           <div class="card" style="width: 312px;">
-            <img src="img/news_slider_img_5.jpg" class="card-img-top" alt="...">
+            <div class="card_img">
+              <img src="img/news_slider_img_5.jpg" class="card-img-top" alt="...">
+            </div>
             <div class="card-body">
               <h5>Best multi-step Beauty skin.</h5>
               <p>Appropriately seize 24/365 markets without adaptive.</p>
@@ -842,7 +852,9 @@
             </div>
           </div>
           <div class="card" style="width: 312px;">
-            <img src="img/news_slider_img_6.jpg" class="card-img-top" alt="...">
+            <div class="card_img">
+              <img src="img/news_slider_img_6.jpg" class="card-img-top" alt="...">
+            </div>
             <div class="card-body">
               <h5>Best multi-step Beauty skin.</h5>
               <p>Appropriately seize 24/365 markets without adaptive.</p>
