--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- slick css link  -->
     <link rel="stylesheet" href="css/slick.css">
+    <!-- VenoBox css link  -->
+    <link rel="stylesheet" href="css/venobox.min.css">
     <!-- main css link  -->
     <link rel="stylesheet" href="css/style.css">
     <!-- responsive css link  -->
@@ -249,7 +251,9 @@
          </div>
       </div>
       <div class="col-lg-6">
-         <div class="our_story_img"></div>
+         <div class="our_story_img">
+            <a href="#" class="play_btn"><i class="fa-solid fa-play"></i></a>
+         </div>
       </div>
     </section>
     <!-- Special offer section end  -->
@@ -390,6 +394,88 @@
        </div>
     </section>
     <!-- About Leadershipe section end  -->
+    <!-- About Leadershipe Info section start  -->
+    <section id="leadershipe_info">
+       <div class="container">
+         <div class="row justify-content-center">
+            <div class="col-lg-2 leadershipe_info_title text-center">
+               <img src="img/quote_left_2.png" alt="">
+               <img src="img/Group.png" alt="">
+            </div>
+         </div>
+         <div class="row justify-content-center">
+            <div class="leadershipe_info_slider text-center">
+                <div class="leadershipe_info_slider_img">
+                   <img src="img/avater_7.png" alt="">
+                </div>
+                <div class="leadershipe_info_slider_img">
+                  <img src="img/avater_8.png" alt="">
+               </div>
+                <div class="leadershipe_info_slider_img">
+                  <img src="img/avater_3.jpg" alt="">
+               </div>
+                <div class="leadershipe_info_slider_img">
+                  <img src="img/avater_4.jpg" alt="">
+               </div>
+                <div class="leadershipe_info_slider_img">
+                  <img src="img/avater_5.png" alt="">
+               </div>
+                <div class="leadershipe_info_slider_img">
+                  <img src="img/avater_6.png" alt="">
+               </div>
+                <div class="leadershipe_info_slider_img">
+                  <img src="img/avater_1.jpg" alt="">
+               </div>
+                <div class="leadershipe_info_slider_img">
+                  <img src="img/avater_2.jpg" alt="">
+               </div>
+            </div>
+            <div class="leadershipe_info_slider_nav">
+                <div class="leadershipe_info_slider_nav_info">
+                   <p>Distinctively revolutionize functional sources rather than cutting-edge interfaces. Appropriately productize next-generation infomediaries without interoperable e-business. Progressively empower.</p>
+                   <h4>rifatul islam</h4>
+                   <p>Customer</p>
+                </div>
+                <div class="leadershipe_info_slider_nav_info">
+                  <p>Distinctively revolutionize functional sources rather than cutting-edge interfaces. Appropriately productize next-generation infomediaries without interoperable e-business. Progressively empower.</p>
+                  <h4>tasmia mim</h4>
+                  <p>Customer</p>
+                </div>
+                <div class="leadershipe_info_slider_nav_info">
+                  <p>Distinctively revolutionize functional sources rather than cutting-edge interfaces. Appropriately productize next-generation infomediaries without interoperable e-business. Progressively empower.</p>
+                  <h4>sowat ahsan</h4>
+                  <p>Customer</p>
+                </div>
+                <div class="leadershipe_info_slider_nav_info">
+                  <p>Distinctively revolutionize functional sources rather than cutting-edge interfaces. Appropriately productize next-generation infomediaries without interoperable e-business. Progressively empower.</p>
+                  <h4>Alexzender Markos</h4>
+                  <p>Customer</p>
+                </div>
+                <div class="leadershipe_info_slider_nav_info">
+                  <p>Distinctively revolutionize functional sources rather than cutting-edge interfaces. Appropriately productize next-generation infomediaries without interoperable e-business. Progressively empower.</p>
+                  <h4>michel richard</h4>
+                  <p>Customer</p>
+                </div>
+                <div class="leadershipe_info_slider_nav_info">
+                  <p>Distinctively revolutionize functional sources rather than cutting-edge interfaces. Appropriately productize next-generation infomediaries without interoperable e-business. Progressively empower.</p>
+                  <h4>Alexzender Markos</h4>
+                  <p>Customer</p>
+                </div>
+                <div class="leadershipe_info_slider_nav_info">
+                  <p>Distinctively revolutionize functional sources rather than cutting-edge interfaces. Appropriately productize next-generation infomediaries without interoperable e-business. Progressively empower.</p>
+                  <h4>Alexzender Markos</h4>
+                  <p>Customer</p>
+                </div>
+                <div class="leadershipe_info_slider_nav_info">
+                  <p>Distinctively revolutionize functional sources rather than cutting-edge interfaces. Appropriately productize next-generation infomediaries without interoperable e-business. Progressively empower.</p>
+                  <h4>Imon Hossain</h4>
+                  <p>Customer</p>
+                </div>
+            </div>
+         </div>
+       </div>
+    </section>
+    <!-- About Leadershipe Info section end  -->
     <!-- Instagrame section start  -->
     <section id="instagrame">
        <div class="container">
@@ -404,31 +490,31 @@
         <div class="row instagram_slider">
            <div class="instagram_item">
               <img src="img/insta_1.jpg" alt="" class="img-fluid">
-              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
+              <a href="img/insta_1.jpg" class="insta_btn my-image-links" data-gall="gallery01"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
               <img src="img/insta_2.jpg" alt="" class="img-fluid">
-              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
+              <a href="img/insta_2.jpg" class="insta_btn my-image-links" data-gall="gallery01"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
               <img src="img/insta_3.jpg" alt="" class="img-fluid">
-              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
+              <a href="img/insta_3.jpg" class="insta_btn my-image-links" data-gall="gallery01"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
               <img src="img/insta_4.jpg" alt="" class="img-fluid">
-              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
+              <a href="img/insta_4.jpg" class="insta_btn my-image-links" data-gall="gallery01"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
               <img src="img/insta_5.jpg" alt="" class="img-fluid">
-              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
+              <a href="img/insta_5.jpg" class="insta_btn my-image-links" data-gall="gallery01"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
               <img src="img/insta_6.jpg" alt="" class="img-fluid">
-              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
+              <a href="img/insta_6.jpg" class="insta_btn my-image-links" data-gall="gallery01"><i class="fa-brands fa-instagram"></i></a>
            </div>
            <div class="instagram_item">
               <img src="img/insta_7.jpg" alt="" class="img-fluid">
-              <a href="#" class="insta_btn"><i class="fa-brands fa-instagram"></i></a>
+              <a href="img/insta_7.jpg" class="insta_btn my-image-links" data-gall="gallery01"><i class="fa-brands fa-instagram"></i></a>
            </div>
         </div>
        </div>
@@ -542,6 +628,8 @@
     <!-- Counter Up Js link  -->
     <script src="js/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
+    <!-- VenoBox js link  -->
+    <script src="js/venobox.min.js"></script>
     <!-- main js link  -->
     <script src="js/app.js"></script>
 </body>
