--- a/shopGrid.html
+++ b/shopGrid.html
@@ -99,7 +99,7 @@
                     <li><a class="dropdown-item" href="about.html">shop-1</a></li>
                     <li><a class="dropdown-item" href="shopGrid.html">shop-2</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">shop-3</a></li>
+                    <li><a class="dropdown-item" href="shopDetails.html">shop-3</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
