--- a/shopDetails.html
+++ b/shopDetails.html
@@ -205,6 +205,12 @@
                         <div class="product_details_slider_nav_item">
                             <img src="img/p-d-t-4.png" alt="">
                         </div>
+                        <div class="product_details_slider_nav_item">
+                          <img src="img/p-d-t-5.png" alt="">
+                        </div>
+                        <div class="product_details_slider_nav_item">
+                          <img src="img/p-d-t-6.png" alt="">
+                        </div>
                     </div>
                  </div>
              </div>
