--- a/about.html
+++ b/about.html
@@ -252,7 +252,7 @@
       </div>
       <div class="col-lg-6">
          <div class="our_story_img">
-            <a href="#" class="play_btn"><i class="fa-solid fa-play"></i></a>
+          <a href="https://youtu.be/i6YLjulNG_E" class="play_btn my-video-links venobox" data-autoplay="true" data-vbtype="video" data-maxwidth="600px"><i class="fa-solid fa-play"></i></a>
          </div>
       </div>
     </section>
