--- a/shopDetails.html
+++ b/shopDetails.html
@@ -213,6 +213,66 @@
                         </div>
                     </div>
                  </div>
+                 <div class="col-lg-6">
+                    <div class="product_details_content">
+                       <h3>Leather Jackets</h3>
+                       <div class="product_rating d-flex flex-wrap">
+                          <h6>5.00</h6>
+                          <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                          </div>
+                          <a href="#">(5 Customer Review)</a>
+                       </div>
+                       <div class="product_price d-flex">
+                          <h5>$125.65</h5>
+                          <del>$150.65</del>
+                       </div>
+                       <p>Quickly productivate holistic systems after 24/365 e-commerce. Continually synthesize superior catalysts for change via high standards in leadership skills. Collaboratively evisculate distributed functionalities rather than timely methods of empowerment.</p>
+                       <hr>
+                       <div class="product_selector d-flex">
+                        <h6>Size:</h6>
+                          <select class="form-select" aria-label="Default select example">
+                            <option selected>Select Size</option>
+                            <option value="44">44</option>
+                            <option value="42">42</option>
+                            <option value="40">40</option>
+                          </select>
+                       </div>
+                       <div class="product_selector d-flex">
+                        <h6>color:</h6>
+                          <select class="form-select" aria-label="Default select example">
+                            <option selected>Select Color</option>
+                            <option value="orange">orange</option>
+                            <option value="black">black</option>
+                            <option value="yellow">yellow</option>
+                          </select>
+                       </div>
+
+                       <div class="product_quality">
+                          <h6>Quantity:</h6>
+                          <div class="product_quality_item">
+                             <button class="qui_btn">
+                               <i class="fa-solid fa-minus"></i>
+                             </button>
+                             <input type="number" value="1" min="1" max="99">
+                             <button class="qui_btn">
+                               <i class="fa-solid fa-plus"></i>
+                             </button>
+                          </div>
+                          <a href="#"><i class="fa-solid fa-cart-plus"></i> add to cart</a>
+                          <div class="product_icon">
+                             <a href="#" class="icon_btn"><i class="fa-solid fa-heart"></i></a>
+                             <a href="#" class="icon_btn"><i class="fa-solid fa-eye"></i></a>
+                             <a href="#" class="icon_btn"><i class="fa-solid fa-chart-simple"></i></a>
+                          </div>
+                          <hr>
+                       </div>
+                    </div>
+                 </div>
              </div>
         </div>
      </section>
