--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- slick css link  -->
     <link rel="stylesheet" href="css/slick.css">
+    <!-- VenoBox css link  -->
+    <link rel="stylesheet" href="css/venobox.min.css">
     <!-- main css link  -->
     <link rel="stylesheet" href="css/style.css">
     <!-- responsive css link  -->
@@ -767,7 +769,7 @@
           </div>
         </div>
         <div class="col-6 special_offer_img">
-           <a href="#" class="play_btn"><i class="fa-solid fa-play"></i></a>
+           <a href="https://youtu.be/i6YLjulNG_E" class="play_btn my-video-links venobox" data-autoplay="true" data-vbtype="video" data-maxwidth="600px"><i class="fa-solid fa-play"></i></a>
         </div>
       </div>
     </section>
@@ -1034,9 +1036,6 @@
     </button>
 
 
-
-
-
     <!-- main jquary link  -->
     <script src="js/jquery-3.6.1.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
@@ -1049,6 +1048,8 @@
     <!-- Counter Up Js link  -->
     <script src="js/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
+    <!-- VenoBox js link  -->
+    <script src="js/venobox.min.js"></script>
     <!-- main js link  -->
     <script src="js/app.js"></script>
 </body>
