--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     <li><a class="dropdown-item" href="shopGrid.html">shop-2</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="shopDetails.html">shop-3</a></li>
+                    <li><a class="dropdown-item" href="compare.html">shop-4</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
