--- a/shopCart.html
+++ b/shopCart.html
@@ -161,162 +161,21 @@
         </div>
     </nav>
     <!-- Nav section end  -->
-    <!-- Compare Banner section start  -->
-    <section id="compare_banner">
+    <!-- Shop Cart Banner section start  -->
+    <section id="shop_cart_banner">
         <div class="container h-100">
             <div class="row h-100 justify-content-center align-items-center">
-                <div class="col-lg-6">
-                    <div class="compare_banner_content text-center">
-                        <h3>compare</h3>
-                        <p> <span><a href="index.html">Home</a></span>  /  Compare Products</p>
+                <div class="col-lg-2">
+                    <div class="shop_cart_banner_content text-center">
+                        <h3>Cart</h3>
+                        <p> <span><a href="index.html">Home</a></span>  /  Cart</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Compare Banner section end  -->
-    <!-- Compare Product Info section start  -->
-    <section id="compare_product_info">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <form action="" class="product_search">
-                        <input type="text" class=" w-100 form_control" placeholder="Search Product....">
-                        <button type="submit">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </button>
-                    </form>
-                    <div class="compare_product_info_table">
-                        <table class="compare_product_info_table_item" id="compare_product_info_table_item">
-                            <tbody>
-                                <tr class="tr_remove">
-                                    <th><h6>remove</h6></th>
-                                    <td><a href="#"><i class="fa-solid fa-trash-can"></i></a></td>
-                                    <td><a href="#"><i class="fa-solid fa-trash-can"></i></a></td>
-                                    <td><a href="#"><i class="fa-solid fa-trash-can"></i></a></td>
-                                    <td><a href="#"><i class="fa-solid fa-trash-can"></i></a></td>
-                                </tr>
-                                <tr class="tr_img">
-                                    <th><h6>product</h6></th>
-                                    <td>
-                                        <div class="product_img">
-                                            <img src="img/cart-img-2-1.png" alt="">
-                                        </div>
-                                        <a href="shopDetails.html">Jacket Hoodie Sweater</a>
-                                    </td>
-                                    <td>
-                                        <div class="product_img">
-                                            <img src="img/cart-img-2-2.png" alt="">
-                                        </div>
-                                        <a href="shopDetails.html">Jacket Hoodie Sweater</a>
-                                    </td>
-                                    <td>
-                                        <div class="product_img">
-                                            <img src="img/cart-img-2-3.png" alt="">
-                                        </div>
-                                        <a href="shopDetails.html">Jacket Hoodie Sweater</a>
-                                    </td>
-                                    <td>
-                                        <div class="product_img">
-                                            <img src="img/cart-img-2-4.png" alt="">
-                                        </div>
-                                        <a href="shopDetails.html">Jacket Hoodie Sweater</a>
-                                    </td>
-                                </tr>
-                                <tr class="tr_description">
-                                   <th><h6>Description</h6></th>
-                                   <td><p>Assertively incentivize multimedia based collaboration and idea-share</p></td>
-                                   <td><p>Assertively incentivize multimedia based collaboration and idea-share</p></td>
-                                   <td><p>Assertively incentivize multimedia based collaboration and idea-share</p></td>
-                                   <td><p>Assertively incentivize multimedia based collaboration and idea-share</p></td>
-                                </tr>
-                                <tr class="tr_price">
-                                   <th><h6>price</h6></th>
-                                   <td>$130.00</td>
-                                   <td>$220.00</td>
-                                   <td>$100.00</td>
-                                   <td>$80.00</td>
-                                </tr>
-                                <tr class="tr_color">
-                                  <th><h6>color</h6></th>
-                                  <td>Red</td>
-                                  <td>Black</td>
-                                  <td>Gray</td>
-                                  <td>Blue & Brown</td>
-                               </tr>
-                                <tr class="tr_ratings">
-                                  <th><h6>ratings</h6></th>
-                                  <td>
-                                    <div class="product_ratings d-flex flex-wrap justify-content-center">
-                                      <div class="star">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                      </div>
-                                      <div class="ratings_count">(5)</div>
-                                    </div>
-                                  </td>
-                                  <td>
-                                    <div class="product_ratings d-flex flex-wrap justify-content-center">
-                                      <div class="star">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                      </div>
-                                      <div class="ratings_count">(5)</div>
-                                    </div>
-                                  </td>
-                                  <td>
-                                    <div class="product_ratings d-flex flex-wrap justify-content-center">
-                                      <div class="star">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                      </div>
-                                      <div class="ratings_count">(5)</div>
-                                    </div>
-                                  </td>
-                                  <td>
-                                    <div class="product_ratings d-flex flex-wrap justify-content-center">
-                                      <div class="star">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                      </div>
-                                      <div class="ratings_count">(5)</div>
-                                    </div>
-                                  </td>   
-                               </tr>
-                              <tr class="tr_stock">
-                                <th><h6>Stock</h6></th>
-                                <td><i class="fa-solid fa-check"></i> In Stock</td>
-                                <td><i class="fa-solid fa-check"></i> In Stock</td>
-                                <td><i class="fa-solid fa-check"></i> In Stock</td>
-                                <td><i class="fa-solid fa-check"></i> In Stock</td>
-                              </tr>
-                              <tr class="tr_cart">
-                                <th><h6>Add to Cart</h6></th>
-                                <td><a href="#">Add to Cart</a></td>
-                                <td><a href="#">Add to Cart</a></td>
-                                <td><a href="#">Add to Cart</a></td>
-                                <td><a href="#">Add to Cart</a></td>
-                              </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Compare Product Info section end  -->
+    <!-- Shop Cart Banner section end  -->
+
 
     <!-- Footer section start  -->
     <footer id="about_footer">
@@ -324,7 +183,8 @@
            <div class="row">
               <div class="col-lg-5 about_footer_content">
                  <h3>Subscribe to Our Newsletter!</h3>
-                 <p>Authoritatively morph 24/7 potentialities with error-free partnerships. Objectively engineer multimedia.</p>
+                 <p>Authoritatively morph 24/7 potentialities with error-free partnerships. Objectively engineer 
+                    multimedia.</p>
               </div>
               <div class="col-lg-6 ms-auto">
                  <div class="about_footer_input d-flex">
@@ -338,7 +198,8 @@
            <div class="row about_footer_info">
               <div class="col-lg-3 about_footer_item">
                  <img src="img/Logo.png" alt="">
-                 <p>Progressively optimize effective ideas before turnkey process improvements. Proactively disseminate</p>
+                 <p>Progressively optimize effective ideas before turnkey process improvements. Proactively 
+                    disseminate</p>
                  <div class="about_footer_item_icon">
                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
