--- a/shopGrid.html
+++ b/shopGrid.html
@@ -99,6 +99,7 @@
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="shopDetails.html">shop-3</a></li>
                     <li><a class="dropdown-item" href="compare.html">shop-4</a></li>
+                    <li><a class="dropdown-item" href="shopCart.html">shop Cart-5</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
