--- a/shopCart.html
+++ b/shopCart.html
@@ -175,6 +175,62 @@
         </div>
     </section>
     <!-- Shop Cart Banner section end  -->
+    <!-- Shop Cart Details section start  -->
+    <section id="shop_cart_details">
+       <div class="container">
+          <div class="row">
+             <div class="col-lg-12">
+                <div class="shop_cart_details_table">
+                   <table id="shop_cart_details_table_item" class="shop_cart_details_table_item">
+                      <tbody>
+                         <tr class="tr_heading">
+                            <th> <h6>Image</h6> </th>
+                            <th> <h6>Product Name</h6> </th>
+                            <th> <h6>Price/Unit</h6> </th>
+                            <th> <h6>Quantity</h6> </th>
+                            <th> <h6>Total</h6> </th>
+                            <th> <h6>Remove</h6> </th>
+                         </tr>
+                         <tr class="cart_item">
+                           <td> <a href="shopGrid.html" class="cart_product_img">
+                              <img src="img/cart-img-1-1.jpg" alt=""> </a>
+                            </td>
+                            <td><a href="shopGrid.html" class="cart_para"><p>Jacket Hoodie Sweater</p></a></td>
+                            <td>$130.00</td>
+                            <td>
+                               <div class="quantity d-flex flex-wrap justify-content-center">
+                                  <button><i class="fa-solid fa-minus"></i></button>
+                                  <input type="number" value="1" min="1" max="99">
+                                  <button><i class="fa-solid fa-plus"></i></button>
+                               </div>
+                            </td>
+                            <td>$130.00</td>
+                            <td><a href="#" class="trush"><i class="fa-solid fa-trash-can"></i></a></td>
+                         </tr>
+                         <tr class="cart_item">
+                            <td> <a href="shopGrid.html" class="cart_product_img">
+                              <img src="img/cart-img-1-2.jpg" alt=""> </a>
+                            </td>
+                            <td><a href="shopGrid.html" class="cart_para"><p>sports Shoes</p></a></td>
+                            <td>$23.00</td>
+                            <td>
+                               <div class="quantity d-flex flex-wrap justify-content-center">
+                                  <button><i class="fa-solid fa-minus"></i></button>
+                                  <input type="number" value="1" min="1" max="99">
+                                  <button><i class="fa-solid fa-plus"></i></button>
+                               </div>
+                            </td>
+                            <td>$52.00</td>
+                            <td><a href="#" class="trush"><i class="fa-solid fa-trash-can"></i></a></td>
+                         </tr>
+                      </tbody>
+                   </table>
+                </div>
+             </div>
+          </div>
+       </div>
+    </section>
+    <!-- Shop Cart Details section end  -->
 
 
     <!-- Footer section start  -->
