--- a/shopCart.html
+++ b/shopCart.html
@@ -106,6 +106,7 @@
                     <li><a class="dropdown-item" href="shopDetails.html">shop-3</a></li>
                     <li><a class="dropdown-item" href="compare.html">shop-4</a></li>
                     <li><a class="dropdown-item" href="shopCart.html">shop Cart-5</a></li>
+                    <li><a class="dropdown-item" href="checkout.html">checkout-6</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -225,6 +226,39 @@
                          </tr>
                       </tbody>
                    </table>
+                </div>
+                <div class="shop_cart_details_table_2 d-flex justify-content-between">
+                   <div class="shop_cart_details_table_2_input">
+                      <input type="text" placeholder="Enter coupon code">
+                      <button type="submit">Submit<i class="fa-solid fa-arrow-right-long"></i></button>
+                   </div>
+                   <div class="shop_cart_details_table_2_button">
+                      <button type="submit">Update Cart<i class="fa-solid fa-arrow-right-long"></i></button>
+                      <a href="#">Continue Shopping<i class="fa-solid fa-arrow-right-long"></i></a>
+                   </div>
+                </div>
+             </div>
+          </div>
+
+          <div class="row justify-content-end">
+             <div class="col-lg-6">
+                <div class="shop_cart_total_cart">
+                   <h4>Cart Total:</h4>
+                   <div class="shop_cart_total_cart_table">
+                      <table class="shop_cart_table">
+                         <tbody>
+                            <tr class="shop_cart_table_item">
+                               <th><p>Subtotal</p></th>
+                               <td>$130.00</td>
+                            </tr>
+                            <tr class="shop_cart_table_item">
+                               <th><p>Total</p></th>
+                               <td>$130.00</td>
+                            </tr>
+                         </tbody>
+                      </table>
+                   </div>
+                   <a href="checkout.html">Proceed To Checkout<i class="fa-solid fa-arrow-right-long"></i></a>
                 </div>
              </div>
           </div>
