--- a/shopGrid.html
+++ b/shopGrid.html
@@ -100,6 +100,7 @@
                     <li><a class="dropdown-item" href="shopDetails.html">shop-3</a></li>
                     <li><a class="dropdown-item" href="compare.html">shop-4</a></li>
                     <li><a class="dropdown-item" href="shopCart.html">shop Cart-5</a></li>
+                    <li><a class="dropdown-item" href="checkout.html">checkout-6</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
