--- a/checkout.html
+++ b/checkout.html
@@ -176,6 +176,88 @@
         </div>
     </section>
     <!-- Banner section end  -->
+    <!-- CheckOut Billing Information section start  -->
+    <section id="checkout_info">
+       <div class="container">
+         <div class="row">
+            <div class="col-lg-12">
+              <div class="checkout_coupon d-flex">
+                <img src="img/exclamation.png" alt="">
+                <p>Have a coupon?</p>
+                <a href="#">Click here to enter your code</a>
+              </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-lg-6">
+               <div class="checkout_info_billing_input">
+                  <h4>Billing Information</h4>
+                  <form action="" class="">
+                     <div class="input_name d-flex justify-content-between ">
+                       <div>
+                        <h5>First Name*</h5>
+                        <input type="text" placeholder="Your first name...">
+                       </div>
+                       <div>
+                        <h5>Last Name*</h5>
+                        <input type="text" placeholder="Your last name...">
+                       </div>
+                     </div>
+                     <div class="input_company">
+                       <h5>Company name (optional)*</h5>
+                       <input type="text" placeholder="Name">
+                     </div>
+                     <div class="input_company">
+                       <h5>Email*</h5>
+                       <input type="email" placeholder="Email" required>
+                     </div>
+                     <div class="input_company">
+                       <h5>telephone*</h5>
+                       <input type="phone" placeholder="+880" required>
+                     </div>
+                     <div class="input_company">
+                       <h5>country*</h5>
+                       <select class="form-select" aria-label="Default select example">
+                        <option selected>Select...</option>
+                        <option value="1">Bangladesh</option>
+                        <option value="2">India</option>
+                        <option value="3">Pakistan</option>
+                       </select>
+                     </div>
+                     <div class="input_company">
+                       <h5>Street address*</h5>
+                       <input type="name" placeholder="House and street name...">
+                       <input type="name" placeholder="Apartment, suite, unit, etc. (optional)">
+                     </div>
+                     <div class="input_company">
+                       <h5>Town / City*</h5>
+                       <select class="form-select" aria-label="Default select example">
+                        <option selected>Select...</option>
+                        <option value="1">Chittagong</option>
+                        <option value="2">Dhaka</option>
+                        <option value="3">Sylet</option>
+                       </select>
+                     </div>
+                     <div class="input_company">
+                       <h5>Post Code*</h5>
+                       <input type="number" placeholder="Code...">
+                     </div>
+                  </form>
+               </div>
+            </div>
+            <div class="col-lg-6">
+               <div class="checkout_info_additional_input">
+                  <h4>Additional Information</h4>
+                  <form action="">
+                    <h5>Order notes (optional)*</h5>
+                    <textarea placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
+                  </form>
+               </div>
+            </div>
+         </div>
+       </div>
+    </section>
+    <!-- CheckOut Billing Information section end  -->
 
 
 <!-- Footer section start  -->
